Bug 383558 - Errors after approving or cancelling Useractions -> System -> Backup current for '..' panel item
Summary: Errors after approving or cancelling Useractions -> System -> Backup current ...
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 383559 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-08-15 14:58 UTC by Alexander Mentyu
Modified: 2018-05-06 00:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2017-08-15 14:58:14 UTC
Steps to reproduce:
1. Select '..' item in panel (visit some folder and '..' will be selected automatically).
2. Select Useractions -> System -> Backup current.
3. Press 'Cancel' button in 'User Action - New filename' window.

Actual results:
next (or similar) errors occur:
QXcbConnection: XCB error: 3 (BadWindow), sequence: 3440, resource id: 20974165, major code: 40 (TranslateCoords), minor code: 0

or

QXcbConnection: XCB error: 3 (BadWindow), sequence: 1864, resource id: 20974183, major code: 40 (TranslateCoords), minor code: 0

Reproducibility: sometimes.
Comment 1 Alexander Mentyu 2017-08-15 15:09:44 UTC
Also there are errors after pressing RMB for various file types after cancelling of 'Backup current' for '..' panel item operation:

for .mp4 files:
'libpng warning: iCCP: known incorrect sRGB profile'

for newly created '...old' folder:
'Warning:Mimetype for filename extension ( "application/x-trash" ) did not match mimetype for content ( "inode/directory" ). Using content-based mimetype.'

for regular folders:
'Mimetype for filename extension ( "application/octet-stream" ) did not match mimetype for content ( "inode/directory" ). Using content-based mimetype.'

for .iso files:
'Could not detect mimetype from content. Using extension-based mimetype: "application/x-cd-image"'

and so on.
Comment 2 Alex Bikadorov 2017-08-20 18:25:46 UTC
*** Bug 383559 has been marked as a duplicate of this bug. ***
Comment 3 Alex Bikadorov 2017-08-20 19:29:05 UTC
Git commit 60096b5f23f7e0d9bdb11b07bb0a15151b46fccc by Alexander Bikadorov.
Committed on 20/08/2017 at 18:33.
Pushed by abikadorov into branch 'master'.

UserAction: if ".." is current entry, return empty string for %?Current%

FIXED: [ 383558 ] Errors after approving or cancelling Useractions -> System -> Backup current for '..' panel item

M  +21   -17   krusader/UserAction/expander.cpp

https://commits.kde.org/krusader/60096b5f23f7e0d9bdb11b07bb0a15151b46fccc