UserAction: if ".." is current entry, return empty string for %?Current%

FIXED: [ 383558 ] Errors after approving or cancelling Useractions -> System -> Backup current for '..' panel item
BUG: 383558